Add membership and permissions features